--- a/Packs/RSANetWitness_v11_1/ReleaseNotes/3_2_6.md
+++ b/Packs/RSANetWitness_v11_1/ReleaseNotes/3_2_6.md
@@ -3,7 +3,4 @@
 
 ##### RSANetWitness v11.5
 - Updated the Docker image to: *demisto/python3:3.12.8.1983910*.
-
-
-
-
+- Update pack with fetch incidents/alerts and document update.
